--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,11 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-src/firebase.js
-firebase.js
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 node_modules
 dist
 dist-ssr
